secciones.pug agregadas y contenido

--- a/pug/includes/navbar.pug
+++ b/pug/includes/navbar.pug
@@ -8,50 +8,35 @@
         </button>
         <div class="collapse navbar-collapse open-sans text-uppercase spacing-3" id="basicExampleNav">
             <ul class="navbar-nav mr-auto">
-                if titlePage == "#Inicio"
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">Home</a>
-                    </li>
-                else
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Home</a>
-                    </li>
+               
                     
-                if titlePage == "Nosotros"
+                
                     <li class="nav-item active">
-                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="#">Nosotros</a>
                     </li>
-                else
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
-                    </li>
+                
 
-                if titlePage == "Obras"
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./obras.html">Obras</a>
-                    </li>
-                else
-                    <li class="nav-item">
-                        <a class="nav-link" href="./obras.html">Obras</a>
-                    </li>
-                
-                if titlePage == "Servicios"
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./servicios.html">Servicios</a>
-                    </li>
-                else
-                    <li class="nav-item">
-                        <a class="nav-link" href="./servicios.html">Servicios</a>
+                    <li class="nav-item active dropdown">
+                        <a class="nav-link nav-item dropdown-toggle" id="navbarDropdown" href="#" data-toggle="dropdown">Modulos Sanitizantes</a>
+                        div(class="dropdown-menu text-center"  aria-labelledby="navbarDropdown")
+                            
+                             
+                                a(class="dropdown-item" href="#") Totem
+                             
+                                a(class="dropdown-item py-3 px-0 px-lg-3 js-scroll-trigger" href="#") Pórtico
+                         
+                                a(class="dropdown-item py-3 px-0 px-lg-3 js-scroll-trigger" href="#") Cabina
                     </li>
                 
-                if titlePage == "Contacto"
+                 
+                
+            
+                
                     <li class="nav-item active">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link" href="#">Contacto</a>
                     </li>
-                else
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
-                    </li>
+                
+                 
             </ul>
             
         </div>
