--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -3,5 +3,7 @@ block append config
     - titlePage = "Inicio"
 
 block append content
-    section#home.bg-dark
-        include ./home.pug
+    section#nosotros.bg-dark
+        include nosotros.pug
+    section#modulos-sanitizantes.bg-ligth
+        include modulos.pug
