--- a/pug/includes/script-js.pug
+++ b/pug/includes/script-js.pug
@@ -1,6 +1,6 @@
-script(src="js/jquery.min.js")
-script(src="js/popper.min.js")
-script(src="js/bootstrap.min.js")
-script(src="js/mdb.min.js")
-script(src="js/anime.min.js")
-script(src="js/main.js")
+script(src="../js/jquery.min.js")
+script(src="../js/popper.min.js")
+script(src="../js/bootstrap.min.js")
+script(src="../js/mdb.min.js")
+script(src="../js/anime.min.js")
+script(src="../js/main.js")
