--- a/pug/templates/template.pug
+++ b/pug/templates/template.pug
@@ -9,7 +9,7 @@ html(lang='es')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         title #{titlePage} | Constructora PEC
         //- Core CSS
-        include ../includes/link-css.pug
+        include ../includes/link-css
         //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
          //- if lt IE 9
         //-script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
