Arreglos en modulos.pug y implementacion de mixins

--- a/pug/config/config.pug
+++ b/pug/config/config.pug
@@ -1,1 +1,46 @@
 - let titlePage = "CAMBIAR EL TITULO DE LA PAGINA"
+- 
+    let listados = {
+        primero:[
+            {
+            name: "Comercios",
+            icon: `fas fa-circle`,
+            },
+            {
+            name: "Industrias",
+            icon: `fas fa-circle`
+            },
+            {
+            name: "Edificios",
+            icon: `fas fa-circle`
+            },
+            {
+            name: "Hogares",
+            icon: `fas fa-circle`
+            },
+            {
+            name: "Colegios",
+            icon: `fas fa-circle`
+            }
+            ],
+        segundo:[
+            {name: "Fabricados íntegramente en Aluminio Compuesto de máxima calidad inalterable",
+            icon: `./img/assets/icoList.png`},
+            {name: "Elimina el 99.9% de virus y bacterias.",
+            icon: `img/assets/icoList.png`},
+            {name: "Aptos para uso de desinfectantes aprobados y certificados por ANMAT.",
+            icon: `./img/assets/icoList.png`},
+            {name: "Nuestros modelos no requieren instalación de agua, son compactos y fácilmente trasladables.",
+            icon: `./img/assets/icoList.png`},
+            ],
+        tercero:[
+            {name: "Ácido Hipocloroso al 0.05%",
+            icon: `fas fa-circle`},
+            {name: "Hipoclorito de Sodio al 0.05%",
+            icon: `fas fa-circle`},
+            {name: "Amonio Cuaternario al 0.01%",
+            icon: `fas fa-circle`},
+            {name: "Cloruro de Benzalconio al 1%",
+            icon: `fas fa-circle`}
+        ]
+    }
