--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -3,7 +3,7 @@ block append config
     - titlePage = "Inicio"
 
 block append content
-    section#nosotros.bg-dark
+    section#nosotros.img-nosotros
         include nosotros.pug
-    section#modulos-sanitizantes.bg-ligth
+    section#modulos-sanitizantes
         include modulos.pug
