--- a/pug/includes/navbar.pug
+++ b/pug/includes/navbar.pug
@@ -1,22 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark black ">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            img(src="../img/svg/logo-pec.svg",height="60",alt="Constructora PEC")
+            img(src="../img/svg/logo-pec-text.svg",height="60",alt="Constructora PEC")
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse open-sans text-uppercase spacing-3" id="basicExampleNav">
             <ul class="navbar-nav mr-auto">
-               
-                    
-                
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">Nosotros</a>
                     </li>
-                
 
-                    <li class="nav-item active dropdown">
+                    <li class="nav-item dropdown">
                         <a class="nav-link nav-item dropdown-toggle" id="navbarDropdown" href="#" data-toggle="dropdown">Modulos Sanitizantes</a>
                         div(class="dropdown-menu text-center"  aria-labelledby="navbarDropdown")
                             
@@ -27,16 +23,11 @@
                          
                                 a(class="dropdown-item py-3 px-0 px-lg-3 js-scroll-trigger" href="#") Cabina
                     </li>
+
                 
-                 
-                
-            
-                
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">Contacto</a>
                     </li>
-                
-                 
             </ul>
             
         </div>
