--- a/pug/pages/nosotros.pug
+++ b/pug/pages/nosotros.pug
@@ -1,13 +1,7 @@
 .container
     .row
-        .col-12.text-center
-            
-                h1 Soluciones PEC
-    .row
-        .col-12.text-left
-            h2 Nosotros
-    .row.mt-3
         .col-12
-            p Con más de 20 años en el rubro de la construcción, y más de 200.000 m2 construidos, PERIC CONSTRUCTORA es el resultado de una amplia trayectoria basada en la experiencia y responsabilidad de los profesionales que la integran. <br />
-            p Nuestra empresa brinda a sus CLIENTES una solución integral para la construcción de obras en los sistemas constructivos más utilizados en la actualidad.
-        
+            .text-center.text-white
+                h2 Nosotros
+                p Con más de 20 años en el rubro de la construcción, y más de 200.000 m2 construidos, PERIC CONSTRUCTORA es el resultado de una amplia trayectoria basada en la experiencia y responsabilidad de los profesionales que la integran.
+                p Nuestra empresa brinda a sus CLIENTES una solución integral para la construcción de obras en los sistemas constructivos más utilizados en la actualidad.
