vistas card para mobile

--- a/pug/config/config.pug
+++ b/pug/config/config.pug
@@ -1,4 +1,6 @@
 - let titlePage = "CAMBIAR EL TITULO DE LA PAGINA"
+- let desciption = 'Construido en aluminio compuesto de máxima calidad, inalterable en el tiempo. Este material cuenta con mejores propiedades que el acero inoxidable calidad 430.';
+
 - 
     let listados = {
         primero:[
@@ -25,13 +27,13 @@
             ],
         segundo:[
             {name: "Fabricados íntegramente en Aluminio Compuesto de máxima calidad inalterable",
-            icon: `./img/assets/icoList.png`},
+            icon: `../img/assets/icoList.png`},
             {name: "Elimina el 99.9% de virus y bacterias.",
-            icon: `img/assets/icoList.png`},
+            icon: `../img/assets/icoList.png`},
             {name: "Aptos para uso de desinfectantes aprobados y certificados por ANMAT.",
-            icon: `./img/assets/icoList.png`},
+            icon: `../img/assets/icoList.png`},
             {name: "Nuestros modelos no requieren instalación de agua, son compactos y fácilmente trasladables.",
-            icon: `./img/assets/icoList.png`},
+            icon: `../img/assets/icoList.png`},
             ],
         tercero:[
             {name: "Ácido Hipocloroso al 0.05%",
@@ -42,5 +44,6 @@
             icon: `fas fa-circle`},
             {name: "Cloruro de Benzalconio al 1%",
             icon: `fas fa-circle`}
-        ]
+            ]
+        
     }
