--- a/pug/pages/nosotros.pug
+++ b/pug/pages/nosotros.pug
@@ -1,5 +1,5 @@
-.container
-    .row
+.container.h-100
+    .row.h-100.justify-content-center.align-items-center
         .col-12
             .text-center.text-white
                 h2 Nosotros
