estructura de modal

--- a/pug/config/config.pug
+++ b/pug/config/config.pug
@@ -44,6 +44,84 @@
             icon: `fas fa-circle`},
             {name: "Cloruro de Benzalconio al 1%",
             icon: `fas fa-circle`}
-            ]
+            ],
+        totem:[
+            {name: "3 micro aspersores nebulizadores",
+            icon: `fas fa-circle`},
+            {name: "Tanque integrado de 10lt de capacidad. (equivalente a 200 accionamientos)",
+            icon: `fas fa-circle`},
+            {name: "Sensor de movimiento y activación automática.",
+            icon: `fas fa-circle`},
+            {name: "Bomba periférica de alta calidad",
+            icon: `fas fa-circle`},
+            {name: "Instalación eléctrica con llave termo-magnética. ",
+            icon: `fas fa-circle`},
+            {name: "Protocolo de acceso de 3 pasos. ",
+            icon: `fas fa-circle`},
+            ],
+        portico:[
+            {name: "6 micro aspersores nebulizadores.",
+            icon: `fas fa-circle`},
+            {name: "Tanque integrado de 10 lt de capacidad. (equivalente a 100 accionamientos)",
+            icon: `fas fa-circle`},
+            {name: "Alfombra antideslizante y sanitizante",
+            icon: `fas fa-circle`},
+            {name: "Sensor de movimiento y activación automática",
+            icon: `fas fa-circle`},
+            {name: "Bomba periférica de alta calidad.",
+            icon: `fas fa-circle`},
+            {name: "Instalación eléctrica con llave termo magnética.",
+            icon: `fas fa-circle`},
+            {name: "Protocolo de acceso de 3 pasos.",
+            icon: `fas fa-circle`},
+            ],
+        cabina:[
+            {name: "6 micro aspersores nebulizadores.",
+            icon: `fas fa-circle`},
+            {name: "Tanque integrado de 50 o 100lt de capacidad. (equivalente a 900 accionamientos)",
+            icon: `fas fa-circle`},
+            {name: "Alfombra antideslizante y sanitizante.",
+            icon: `fas fa-circle`},
+            {name: "Sensor de movimiento y activación automática.",
+            icon: `fas fa-circle`},
+            {name: "Bomba periférica de alta calidad.",
+            icon: `fas fa-circle`},
+            {name: "Instalación eléctrica con llave termo magnética.",
+            icon: `fas fa-circle`},
+            {name: "Indicadores de ingreso y egreso",
+            icon: `fas fa-circle`},
+            {name: "Iluminación Led interior",
+            icon: `fas fa-circle`},
+            {name: "Protocolo de acceso de 3 pasos",
+            icon: `fas fa-circle`},
+        ],
         
+    };
+
+- 
+    let contenidoModal = {
+        totem:[
+            {
+            tittle: "TOTEM PEC 314",
+            text: "Módulo Sanitizante - Uso Interior y Exterior",
+            caracteristicas: listados.totem,
+            img: `../img/assets/ejemplos/ejemploTotemSilueta.jpg`,
+            }
+            ],
+        portico:[
+            {
+            tittle: "PÓRTICO PEC 316",
+            text: "Módulo Sanitizante - Uso Interior y Exterior",
+            caracteristicas: listados.portico,
+            img: `../img/assets/ejemplos/ejemploPortico.jpg`,
+            }
+            ],
+        cabina:[
+            {
+            tittle: "CABINA PEC 318",
+            text: "Módulo Sanitizante - Uso Interior y Exterior",
+            caracteristicas: listados.cabina,
+            img: `ejemploCabina.jpg`,
+            }
+            ],
     }
