--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -7,3 +7,5 @@ block append content
         include nosotros.pug
     section#modulos-sanitizantes
         include modulos.pug
+    section#contacto
+        include contacto.pug
