--- a/pug/pages/modulos.pug
+++ b/pug/pages/modulos.pug
@@ -30,5 +30,7 @@
         
         +card("Cabina", "cabinaUso.png", desciption) 
         +modal('Contenido Modal')
+        +contentModal(contenidoModal.totem)
+        
         
            
