--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -4,8 +4,9 @@ block append config
 
 block append content
     section#nosotros.img-nosotros
-        include nosotros.pug
-    section#modulos-sanitizantes
+        .container
+            include nosotros.pug
+    section#modulos-sanitizantes.container
         include modulos.pug
-    section#contacto
+    section#contacto.container
         include contacto.pug
