--- a/pug/config/config.pug
+++ b/pug/config/config.pug
@@ -27,13 +27,13 @@
             ],
         segundo:[
             {name: "Fabricados íntegramente en Aluminio Compuesto de máxima calidad inalterable",
-            icon: `../img/assets/icoList.png`},
+            icon: `./img/assets/icoList.png`},
             {name: "Elimina el 99.9% de virus y bacterias.",
-            icon: `../img/assets/icoList.png`},
+            icon: `./img/assets/icoList.png`},
             {name: "Aptos para uso de desinfectantes aprobados y certificados por ANMAT.",
-            icon: `../img/assets/icoList.png`},
+            icon: `./img/assets/icoList.png`},
             {name: "Nuestros modelos no requieren instalación de agua, son compactos y fácilmente trasladables.",
-            icon: `../img/assets/icoList.png`},
+            icon: `./img/assets/icoList.png`},
             ],
         tercero:[
             {name: "Ácido Hipocloroso al 0.05%",
@@ -45,83 +45,76 @@
             {name: "Cloruro de Benzalconio al 1%",
             icon: `fas fa-circle`}
             ],
-        totem:[
-            {name: "3 micro aspersores nebulizadores",
-            icon: `fas fa-circle`},
-            {name: "Tanque integrado de 10lt de capacidad. (equivalente a 200 accionamientos)",
-            icon: `fas fa-circle`},
-            {name: "Sensor de movimiento y activación automática.",
-            icon: `fas fa-circle`},
-            {name: "Bomba periférica de alta calidad",
-            icon: `fas fa-circle`},
-            {name: "Instalación eléctrica con llave termo-magnética. ",
-            icon: `fas fa-circle`},
-            {name: "Protocolo de acceso de 3 pasos. ",
-            icon: `fas fa-circle`},
-            ],
-        portico:[
-            {name: "6 micro aspersores nebulizadores.",
-            icon: `fas fa-circle`},
-            {name: "Tanque integrado de 10 lt de capacidad. (equivalente a 100 accionamientos)",
-            icon: `fas fa-circle`},
-            {name: "Alfombra antideslizante y sanitizante",
-            icon: `fas fa-circle`},
-            {name: "Sensor de movimiento y activación automática",
-            icon: `fas fa-circle`},
-            {name: "Bomba periférica de alta calidad.",
-            icon: `fas fa-circle`},
-            {name: "Instalación eléctrica con llave termo magnética.",
-            icon: `fas fa-circle`},
-            {name: "Protocolo de acceso de 3 pasos.",
-            icon: `fas fa-circle`},
-            ],
-        cabina:[
-            {name: "6 micro aspersores nebulizadores.",
-            icon: `fas fa-circle`},
-            {name: "Tanque integrado de 50 o 100lt de capacidad. (equivalente a 900 accionamientos)",
-            icon: `fas fa-circle`},
-            {name: "Alfombra antideslizante y sanitizante.",
-            icon: `fas fa-circle`},
-            {name: "Sensor de movimiento y activación automática.",
-            icon: `fas fa-circle`},
-            {name: "Bomba periférica de alta calidad.",
-            icon: `fas fa-circle`},
-            {name: "Instalación eléctrica con llave termo magnética.",
-            icon: `fas fa-circle`},
-            {name: "Indicadores de ingreso y egreso",
-            icon: `fas fa-circle`},
-            {name: "Iluminación Led interior",
-            icon: `fas fa-circle`},
-            {name: "Protocolo de acceso de 3 pasos",
-            icon: `fas fa-circle`},
-        ],
-        
     };
 
 - 
     let contenidoModal = {
-        totem:[
-            {
+        totem:{
             tittle: "TOTEM PEC 314",
             text: "Módulo Sanitizante - Uso Interior y Exterior",
-            caracteristicas: listados.totem,
-            img: `../img/assets/ejemplos/ejemploTotemSilueta.jpg`,
-            }
+            features: [
+                {name: "3 micro aspersores nebulizadores",
+                icon: `iconList.png`},
+                {name: "Tanque integrado de 10lt de capacidad. (equivalente a 200 accionamientos)",
+                icon: `iconList.png`},
+                {name: "Sensor de movimiento y activación automática.",
+                icon: `iconList.png`},
+                {name: "Bomba periférica de alta calidad",
+                icon: `iconList.png`},
+                {name: "Instalación eléctrica con llave termo-magnética. ",
+                icon: `iconList.png`},
+                {name: "Protocolo de acceso de 3 pasos. ",
+                icon: `iconList.png`},
             ],
-        portico:[
-            {
-            tittle: "PÓRTICO PEC 316",
-            text: "Módulo Sanitizante - Uso Interior y Exterior",
-            caracteristicas: listados.portico,
-            img: `../img/assets/ejemplos/ejemploPortico.jpg`,
-            }
-            ],
-        cabina:[
-            {
-            tittle: "CABINA PEC 318",
-            text: "Módulo Sanitizante - Uso Interior y Exterior",
-            caracteristicas: listados.cabina,
-            img: `ejemploCabina.jpg`,
-            }
-            ],
+            img: `ejemploTotemSilueta.jpg`,
+            },
+    //-     portico:
+    //-         {
+    //-             tittle: "PÓRTICO PEC 316",
+    //-             text: "Módulo Sanitizante - Uso Interior y Exterior",
+    //-             features: [
+    //-                 {name: "6 micro aspersores nebulizadores.",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Tanque integrado de 10 lt de capacidad. (equivalente a 100 accionamientos)",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Alfombra antideslizante y sanitizante",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Sensor de movimiento y activación automática",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Bomba periférica de alta calidad.",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Instalación eléctrica con llave termo magnética.",
+    //-                 icon: `iconList.png`},
+    //-                 {name: "Protocolo de acceso de 3 pasos.",
+    //-                 icon: `fas fa-circle`},
+    //-             ], 
+    //-             img: `ejemploPortico.jpg`,
+    //-         }
+    //-         ,
+    //-     cabina:{
+    //-         tittle: "CABINA PEC 318",
+    //-         text: "Módulo Sanitizante - Uso Interior y Exterior",
+    //-         features: [
+    //-             {name: "6 micro aspersores nebulizadores.",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Tanque integrado de 50 o 100lt de capacidad. (equivalente a 900 accionamientos)",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Alfombra antideslizante y sanitizante.",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Sensor de movimiento y activación automática.",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Bomba periférica de alta calidad.",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Instalación eléctrica con llave termo magnética.",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Indicadores de ingreso y egreso",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Iluminación Led interior",
+    //-             icon: `fas fa-circle`},
+    //-             {name: "Protocolo de acceso de 3 pasos",
+    //-             icon: `fas fa-circle`},
+    //-         ],
+    //-         img: `ejemploCabina.jpg`,
+    //-         }
+    //-         ,
     }
