--- a/pug/pages/modulos.pug
+++ b/pug/pages/modulos.pug
@@ -1,36 +1,25 @@
-.container
-    .row
-        .col-12.text-center
-            h2 Modulos Sanitizantes
-    .row
-        .col-12
-            p excelente solución para incrementar las medidas de higiene en el ingreso a aquellos espacios de alta circulación tales como:   
-    .row.mt-0
-        .col-12
-            +getListado(listados.primero)
-    .row
-        .col-12.caracteristicas
-            +getListado(listados.segundo)
-    .row
-        .col-12.descripcion-modulos
-            p Nuestros diseños se incorporan de manera fácil a cualquier lugar en donde haya ingreso de personas. Mediante el uso de micro aspersores, se impulsa una solución sanitizante inocua, incolora e inodora diluida en agua que cubre el 100% de la superficie corporal. Quedando en sólo 5 segundos cubierto con una barrera anti bacterial garantizada
-    .row
-        .col-12
-            p Se puede utilizar cualquier antibacterial aprobado por ANMAT. Los siguientes mencionados son de venta libre:   
-        .col-12
-            +getListado(listados.tercero)
-            
-    .row
+.row
+    .col-12.text-center
+        h2 Modulos Sanitizantes
+.row
+    .col-12
+        p excelente solución para incrementar las medidas de higiene en el ingreso a aquellos espacios de alta circulación tales como:   
+.row.mt-0
+    .col-12
+        +getListado(listados.primero)
+.row
+    .col-12.caracteristicas
+        +getListado(listados.segundo)
+.row
+    .col-12.descripcion-modulos
+        p Nuestros diseños se incorporan de manera fácil a cualquier lugar en donde haya ingreso de personas. Mediante el uso de micro aspersores, se impulsa una solución sanitizante inocua, incolora e inodora diluida en agua que cubre el 100% de la superficie corporal. Quedando en sólo 5 segundos cubierto con una barrera anti bacterial garantizada
+.row
+    .col-12
+        p Se puede utilizar cualquier antibacterial aprobado por ANMAT. Los siguientes mencionados son de venta libre:   
+    .col-12
+        +getListado(listados.tercero)
         
-        +card("Totem", "totemUso.png", desciption) 
-        +modal('Contenido Modal')
-        
-        +card("Portico", "porticoUso.png", desciption) 
-        +modal('Contenido Modal')
-        
-        +card("Cabina", "cabinaUso.png", desciption) 
-        +modal('Contenido Modal')
-        +contentModal(contenidoModal.totem)
-        
-        
-           
+.row
+    
+    +card("Totem", "totemUso.png", desciption) 
+    +modal(contenidoModal.totem)
