--- a/pug/pages/nosotros.pug
+++ b/pug/pages/nosotros.pug
@@ -1,7 +1,6 @@
-.container.h-100
-    .row.h-100.justify-content-center.align-items-center
-        .col-12
-            .text-center.text-white
-                h2 Nosotros
-                p Con más de 20 años en el rubro de la construcción, y más de 200.000 m2 construidos, PERIC CONSTRUCTORA es el resultado de una amplia trayectoria basada en la experiencia y responsabilidad de los profesionales que la integran.
-                p Nuestra empresa brinda a sus CLIENTES una solución integral para la construcción de obras en los sistemas constructivos más utilizados en la actualidad.
+.row
+    .col-12
+        .text-center.text-white.my-auto
+            h2 Nosotros
+            p Con más de 20 años en el rubro de la construcción, y más de 200.000 m2 construidos, PERIC CONSTRUCTORA es el resultado de una amplia trayectoria basada en la experiencia y responsabilidad de los profesionales que la integran.
+            p Nuestra empresa brinda a sus CLIENTES una solución integral para la construcción de obras en los sistemas constructivos más utilizados en la actualidad.
